# kaze

./: .gitignore  Cargo.toml  README.md  TESTING.md
src/: agent.rs  chat.rs  cli.rs  compaction.rs  config.rs  constants.rs  diff.rs  format.rs  hooks.rs  main.rs  message.rs  models.rs  output.rs  permissions.rs  provider.rs  session.rs  tokens.rs
src/chat/: commands.rs  context.rs  mod.rs
src/cli/: mod.rs  session.rs
src/config/: loader.rs  mod.rs  paths.rs  resolve.rs  types.rs
src/provider/: client.rs  kind.rs  listing.rs  mod.rs  resolve.rs
src/tools/: bash_tool.rs  edit_tool.rs  glob_tool.rs  grep_tool.rs  mod.rs  read_file.rs  rig_adapter.rs  tests.rs  write_file.rs
src/tui/: app.rs  mod.rs  renderer.rs  ui.rs
