[package]
name = "kaze-cli"
version = "0.1.0"
edition = "2021"
description = "A memory-minimal AI coding agent for the terminal"
license = "MIT"
repository = "https://github.com/PPRAMANIK62/kaze"

[[bin]]
name = "kaze"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# Async runtime (single-threaded for memory efficiency)  
tokio = { version = "1", features = ["rt", "macros", "time", "signal", "process"] }

# LLM provider abstraction
rig-core = "0.31"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Environment
dirs = "6"
dotenvy = "0.15"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
